--- a/stagecoach/configuration/config.yml
+++ b/stagecoach/configuration/config.yml
@@ -2,9 +2,12 @@ default&post:
   __ID#uuid4:
   __SYSTEM#systeminfo:
   __DATETIME#datetimenow:
+  name: None
+  output_folder!required:
   INPUTS: 
   OUTPUTS:
     output_folder#outputfolder:
+      path: ${output_folder}
   SKIPPABLE: True
   _VALIDATE_STAGE:
     "*object": stagecoach.validation.StageValidator
